--- a/nature-sounds/PKGBUILD
+++ b/nature-sounds/PKGBUILD
@@ -11,11 +11,11 @@ source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz")
 sha256sums=('bcb279b1eaa150da8e68a1344d9c97bd1067c012f3f2f3ee9ed6a53aa530dfe9')
 
 build() {
-    cd "$srcdir/$pkgname-$pkgver"
+    cd "$srcdir/$pkgname-$pkgver" || exit
     go build -ldflags="-X main.version=v$pkgver -s -w" -o "$pkgname"
 }
 
 package() {
-    cd "$srcdir/$pkgname-$pkgver"
+    cd "$srcdir/$pkgname-$pkgver" || exit
     install -Dm755 "$pkgname" "$pkgdir/usr/bin/$pkgname"
 }
