--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,5 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
       - run: ./shellcheck
       - run: ./namcap
