--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: ./shellcheck
+  namcap:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
           cache-dependency-glob: "requirements**.txt"
-      - run: ./shellcheck
+      - uses: daaku/gh-action-apt-install@v4
+        with:
+          packages: libalpm
       - run: ./namcap
