--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,5 @@ jobs:
           cache-dependency-glob: "requirements**.txt"
       - uses: daaku/gh-action-apt-install@v4
         with:
-          packages: libalpm-dev
+          packages: libalpm-dev libalpm13
       - run: ./namcap
