--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          force-depth: 0
       - run: ./shellcheck
   namcap:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          force-depth: 0
       - run: ./namcap
