--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          force-depth: 0
+          fetch-depth: 0
           persist-credentials: true
       - run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "jamison-lahman[bot]"
+          git config user.email "jamison@lahman.dev"
       - run: |
           set -x
           for dir in **/; do
