--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-          force-depth: 0
+          fetch-depth: 0
       - run: ./shellcheck
   namcap:
     runs-on: ubuntu-latest
@@ -18,5 +18,5 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-          force-depth: 0
+          fetch-depth: 0
       - run: ./namcap
