prefer github-actions[bot]

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -20,8 +20,8 @@ jobs:
           fetch-depth: 0
           persist-credentials: true
       - run: |
-          git config user.name "jamison-lahman[bot]"
-          git config user.email "jamison@lahman.dev"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - run: |
           set -x
           for dir in **/; do
