--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,12 +1,8 @@
 name: Nightly Updates
 
-#on:
-#  schedule:
-#    - cron: "0 8 * * *"
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: "0 8 * * *"
 
 jobs:
   run-command:
