prefer building from git commits instead of tags

--- a/work/PKGBUILD
+++ b/work/PKGBUILD
@@ -1,23 +1,31 @@
-# Maintainer: Jamison Lahman <jamison@lahman.dev>
+# Maintainer: Jamison Lahman <jamison+aur@lahman.dev>
 
 pkgname=work
 pkgver=1.0.9
-pkgrel=1
+pkgrel=2
 pkgdesc='A stupid simple time tracker.'
 arch=('i686' 'x86_64' 'aarch64')
 url='https://github.com/jmelahman/work'
 license=('MIT')
 makedepends=('go' 'git')
-source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz")
-sha256sums=('52f6f4f99d9e9747308710cfe7b5bb4c0dcc38269e3194318fc7df1ff4463cde')
+_commit='58cd77147c09638119f3f486e93ca96b57f56d3e'
+source=("$pkgname::git+$url.git#commit=$_commit")
+md5sums=('SKIP')
+
+pkgver() {
+  cd "$pkgname" || exit
+
+  git describe --tags | sed 's/^v//'
+}
 
 build() {
-    cd "$srcdir/$pkgname-$pkgver" || exit
-    commit="$(git rev-parse HEAD)"
-    go build -ldflags="-X main.version=v$pkgver -X main.commit=$commit -s -w" -o "$pkgname"
+  cd "$pkgname" || exit
+
+  go build -ldflags="-X main.version=v$pkgver -X main.commit=$_commit -s -w" -o "$pkgname"
 }
 
 package() {
-    cd "$srcdir/$pkgname-$pkgver" || exit
-    install -Dm755 "$pkgname" "$pkgdir/usr/bin/$pkgname"
+  cd "$pkgname" || exit
+
+  install -Dm755 "$pkgname" "$pkgdir/usr/bin/$pkgname"
 }
