--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -1,14 +1,14 @@
 [nature-sounds]
 source = "github"
 github = "jmelahman/nature-sounds"
-use_latest_release = true
+use_max_tag = true
 
 [work]
 source = "github"
 github = "jmelahman/work"
-use_latest_release = true
+use_max_tag = true
 
 [ripsecrets]
 source = "github"
 github = "sirwart/ripsecrets"
-use_latest_release = true
+use_max_tag = true
