prefer prefix and check-symlinks nvchecker

--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -1,14 +1,23 @@
+[check-symlinks]
+source = "github"
+github = "jmelahman/check-symlinks"
+use_max_tag = true
+prefix = "v"
+
 [nature-sounds]
 source = "github"
 github = "jmelahman/nature-sounds"
 use_max_tag = true
-
-[work]
-source = "github"
-github = "jmelahman/work"
-use_max_tag = true
+prefix = "v"
 
 [ripsecrets]
 source = "github"
 github = "sirwart/ripsecrets"
 use_max_tag = true
+prefix = "v"
+
+[work]
+source = "github"
+github = "jmelahman/work"
+use_max_tag = true
+prefix = "v"
