--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,19 @@ on:
   push:
     branches:
       - master
+
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.13
+      - uses: pre-commit-ci/lite-action@v1.1.0
   shellcheck:
     runs-on: ubuntu-latest
     steps:
