fix nature-sounds build on arm

--- a/nature-sounds/PKGBUILD
+++ b/nature-sounds/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=nature-sounds
 pkgver=0.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A lightweight, nature sounds player for the command-line."
 arch=('x86_64' 'aarch64')
 url="https://github.com/jmelahman/nature-sounds"
@@ -23,7 +23,7 @@ pkgver() {
 build() {
   cd "$pkgname" || exit
 
-  go build -ldflags="-X main.version=v$pkgver -X main.commit=$_commit -s -w" -o "$pkgname"
+  CGO_ENABLED=1 go build -ldflags="-X main.version=v$pkgver -X main.commit=$_commit -s -w" -o "$pkgname"
 }
 
 package() {
