--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -1,12 +1,12 @@
 [buildifier-bin]
 source = "github"
-github = "bazelbuild/buildifier-bin"
+github = "bazelbuild/buildtools"
 use_max_tag = true
 prefix = "v"
 
 [buildozer-bin]
 source = "github"
-github = "bazelbuild/buildozer-bin"
+github = "bazelbuild/buildtools"
 use_max_tag = true
 prefix = "v"
 
