--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,12 @@
 repos:
   - repo: local
     hooks:
+      - id: buildifier
+        name: buildifier
+        entry: ./build buildifier
+        language: system
+        files: ^buildifier/PKGBUILD$
+        pass_filenames: false
       - id: buildifier-bin
         name: buildifier-bin
         entry: ./build buildifier-bin
