fix unfortunate bash variable

--- a/buildifier/PKGBUILD
+++ b/buildifier/PKGBUILD
@@ -3,7 +3,7 @@
 _pkgname=buildtools
 pkgname=buildifier
 pkgver=7.3.1
-pkgrel=4
+pkgrel=5
 pkgdesc='A command line tool to format Bazel BUILD files'
 arch=('x86_64' 'aarch64')
 license=('Apache')
@@ -11,7 +11,7 @@ url='https://github.com/bazelbuild/buildtools'
 makedepends=('bazel' 'git' 'python')
 conflicts=('buildifier-bin')
 _commit='45b7ddb516e521e68794bf409d73ff8a32641de3'
-source=("$pkgname::git+$url.git#commit=$_commit")
+source=("${pkgname}::git+$url.git#commit=$_commit")
 md5sums=('SKIP')
 
 build() {
@@ -25,11 +25,11 @@ package() {
   cd "${pkgname}" || exit
 
   # Install the license file
-  install -D -m 0644 LICENSE "${pkgdir}/usr/share/licenses/$pkgname/LICENSE"
+  install -D -m 0644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
   # Install the binary
   install -D -m 0755 \
-    "./bazel-bin/$pkgname/$pkgname_/$pkgname" \
-    "${pkgdir}/usr/bin/$pkgname"
+    "./bazel-bin/${pkgname}/${pkgname}_/${pkgname}" \
+    "${pkgdir}/usr/bin/${pkgname}"
 }
 
