--- a/buildozer/PKGBUILD
+++ b/buildozer/PKGBUILD
@@ -1,58 +1,35 @@
-# Maintainer: Benjamin Denhartog <ben@sudoforge.com>
+# Maintainer: Jamison Lahman <jamison+aur@lahman.dev>
+# Contributor: Benjamin Denhartog <ben@sudoforge.com>
 
-# For ISSUES, REQUESTS, and QUESTIONS:
-# https://github.com/sudoforge/pkgbuilds
-
-_pkgname=buildtools
-pkgname=buildozer
-pkgver=4.2.5
+pkgname=buildifier
+pkgver=7.3.1
 pkgrel=1
 pkgdesc='A command line tool to rewrite Bazel BUILD files using standard conventions'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 license=('Apache')
 url='https://github.com/bazelbuild/buildtools'
-makedepends=('git')
-_bazelisk_pkgver=1.11.0
-source=(
-  "bazelisk-bin-${_bazelisk_pkgver}::https://github.com/bazelbuild/bazelisk/releases/download/v${_bazelisk_pkgver}/bazelisk-linux-amd64"
-  "${pkgname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz"
-  "0001-copy-buildozer-target-output.patch"
-)
-sha256sums=('231ec5ca8115e94c75a1f4fbada1a062b48822ca04f21f26e4cb1cd8973cd458'
-            'd368c47bbfc055010f118efb2962987475418737e901f7782d2a966d1dc80296'
-            '68ae2f6ec82afb45baf89c264438c86db35031368b061d8c92036c341f6eb3b1')
-
-prepare() {
-  cd "${srcdir}/${_pkgname}-${pkgver}"
-
-  for f in "${source[@]}"; do
-    [[ "$f" =~ \.patch$ ]] && \
-    ( \
-      patch -p1 -i "${srcdir}/${f}" > /dev/null 2>&1 ||\
-      ( \
-        echo "failed to apply patch: $(basename ${f})" && \
-        exit 1 \
-      ) \
-    )
-  done
-
-  chmod +x "${srcdir}/${source[0]%%::*}"
-}
+makedepends=('bazel' 'git' 'python')
+conflicts=('buildozer-bin')
+_commit='45b7ddb516e521e68794bf409d73ff8a32641de3'
+source=("${pkgname}::git+$url.git#commit=$_commit")
+md5sums=('SKIP')
 
 build() {
-  cd "${srcdir}/${_pkgname}-${pkgver}"
-  "${srcdir}/${source[0]%%::*}" build "//${pkgname}:${pkgname}-linux"
-  "${srcdir}/${source[0]%%::*}" shutdown
+  cd "${pkgname}" || exit
+
+  bazel build --config=release "//${pkgname}"
+  bazel shutdown
 }
 
 package() {
-  cd "${srcdir}/${_pkgname}-${pkgver}"
+  cd "${pkgname}" || exit
 
   # Install the license file
-  install -D -m 0644 LICENSE "${pkgdir}/usr/share/licenses/buildozer/LICENSE"
+  install -D -m 0644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
   # Install the binary
   install -D -m 0755 \
-    "./bazel-bin/${pkgname}/${pkgname}-linux_amd64" \
-    "${pkgdir}/usr/bin/buildozer"
+    "./bazel-bin/${pkgname}/${pkgname}_/${pkgname}" \
+    "${pkgdir}/usr/bin/${pkgname}"
 }
+
