aarch64 support and add conflicts

--- a/buildifier-bin/PKGBUILD
+++ b/buildifier-bin/PKGBUILD
@@ -4,28 +4,35 @@
 
 pkgname=buildifier-bin
 pkgver=7.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc='A command line tool to format Bazel BUILD files'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 license=('Apache')
 url='https://github.com/bazelbuild/buildtools'
+conflicts=('buildifier')
 source=(
-  "${pkgname%-bin}-${pkgver}::${url}/releases/download/v${pkgver}/${pkgname%-bin}-linux-amd64"
   "LICENSE-${pkgver}::https://raw.githubusercontent.com/bazelbuild/buildtools/v${pkgver}/LICENSE"
 )
-sha256sums=('5474cc5128a74e806783d54081f581662c4be8ae65022f557e9281ed5dc88009'
-            'cfc7749b96f63bd31c3c42b5c471bf756814053e847c10f3eb003417bc523d30')
+source_x86_64+=(
+  "${pkgname}-x86_64-${pkgver}::${url}/releases/download/v${pkgver}/${pkgname%-bin}-linux-amd64"
+)
+source_aarch64+=(
+  "${pkgname}-aarch64-${pkgver}::${url}/releases/download/v${pkgver}/${pkgname%-bin}-linux-arm64"
+)
+sha256sums=('cfc7749b96f63bd31c3c42b5c471bf756814053e847c10f3eb003417bc523d30')
+sha256sums_x86_64=('5474cc5128a74e806783d54081f581662c4be8ae65022f557e9281ed5dc88009')
+sha256sums_aarch64=('0bf86c4bfffaf4f08eed77bde5b2082e4ae5039a11e2e8b03984c173c34a561c')
 
 package() {
   cd "${srcdir}" || exit
 
   # Install the license file
   install -D -m 0644 \
-    "${source[1]%%::*}" \
+    "${source[0]%%::*}" \
     "${pkgdir}/usr/share/licenses/${pkgname%-bin}/LICENSE"
 
   # Install the binary
   install -D -m 0755 \
-    "./${source[0]%%::*}" \
+    "./${pkgname}-${CARCH}-${pkgver}" \
     "${pkgdir}/usr/bin/${pkgname%-bin}"
 }
