--- a/buildozer-bin/PKGBUILD
+++ b/buildozer-bin/PKGBUILD
@@ -3,28 +3,35 @@
 
 pkgname=buildozer-bin
 pkgver=7.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc='A command line tool to rewrite Bazel BUILD files using standard conventions'
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 license=('Apache')
 url='https://github.com/bazelbuild/buildtools'
+conflicts=('buildozer')
 source=(
-  "${pkgname%-bin}-${pkgver}::${url}/releases/download/v${pkgver}/${pkgname%-bin}-linux-amd64"
   "LICENSE-${pkgver}::https://raw.githubusercontent.com/bazelbuild/buildtools/v${pkgver}/LICENSE"
 )
-sha256sums=('3305e287b3fcc68b9a35fd8515ee617452cd4e018f9e6886b6c7cdbcba8710d4'
-            'cfc7749b96f63bd31c3c42b5c471bf756814053e847c10f3eb003417bc523d30')
+source_x86_64+=(
+  "${pkgname}-x86_64-${pkgver}::${url}/releases/download/v${pkgver}/${pkgname%-bin}-linux-amd64"
+)
+source_aarch64+=(
+  "${pkgname}-aarch64-${pkgver}::${url}/releases/download/v${pkgver}/${pkgname%-bin}-linux-arm64"
+)
+sha256sums=('cfc7749b96f63bd31c3c42b5c471bf756814053e847c10f3eb003417bc523d30')
+sha256sums_x86_64=('3305e287b3fcc68b9a35fd8515ee617452cd4e018f9e6886b6c7cdbcba8710d4')
+sha256sums_aarch64=('0b5a2a717ac4fc911e1fec8d92af71dbb4fe95b10e5213da0cc3d56cea64a328')
 
 package() {
   cd "${srcdir}" || exit
 
   # Install the license file
   install -D -m 0644 \
-    "${source[1]%%::*}" \
+    "${source[0]%%::*}" \
     "${pkgdir}/usr/share/licenses/${pkgname%-bin}/LICENSE"
 
   # Install the binary
   install -D -m 0755 \
-    "./${source[0]%%::*}" \
+    "./${pkgname}-${CARCH}-${pkgver}" \
     "${pkgdir}/usr/bin/${pkgname%-bin}"
 }
