fix bazel version, add arm support, upgrade to latest

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,12 @@ repos:
         language: system
         files: ^connections/PKGBUILD$
         pass_filenames: false
+      - id: ibazel
+        name: ibazel
+        entry: ./build ibazel
+        language: system
+        files: ^ibazel/PKGBUILD$
+        pass_filenames: false
       - id: nature-sounds
         name: nature-sounds
         entry: ./build nature-sounds
