--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -40,6 +40,12 @@ github = "bazelbuild/bazel-watcher"
 use_max_tag = true
 prefix = "v"
 
+[ibazel-bin]
+source = "github"
+github = "bazelbuild/bazel-watcher"
+use_max_tag = true
+prefix = "v"
+
 [ripsecrets]
 source = "github"
 github = "sirwart/ripsecrets"
