--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -29,7 +29,10 @@ jobs:
                 bash -c "chown packager -R \"$dir\" && su packager -c './pkgreleaser.py \"${dir///}\"' && chown $(id -u) -R \"$dir\""
             )
             if [ -n "$MESSAGE" ]; then
-              BRANCH="pkgreleaser/${dir}$(date +'%Y-%m-%d')"
+              BRANCH="pkgreleaser/${dir}$(echo "$MESSAGE" | grep -oP '\b[0-9]+\.[0-9]+\.[0-9]+$')"
+              if git ls-remote --heads origin "$BRANCH" | grep -q "$BRANCH"; then
+                continue
+              fi
               git checkout -b "$BRANCH" origin/master
               git commit -am "$MESSAGE"
               git push -f -u origin "$BRANCH"
