try passing `--files` to pre-commit action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           python-version: 3.13
       - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --files $(git diff origin/master HEAD --name-only | tr '\n' ' ')
   shellcheck:
     runs-on: ubuntu-latest
     steps:
