--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,9 @@ on:
   pull_request:
 
 jobs:
-  pre-commit:
+  presubmit:
     runs-on: ubuntu-latest
+    if: ${{ github.ref_name != 'master' }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,6 +21,20 @@ jobs:
       - uses: pre-commit/action@v3.0.1
         with:
           extra_args: --files $(git diff origin/master HEAD --name-only | tr '\n' ' ')
+  postsubtit:
+    runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'master' }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.13
+      - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --files $(git diff origin/master~1 HEAD --name-only | tr '\n' ' ')
   shellcheck:
     runs-on: ubuntu-latest
     steps:
