good feature, but why isnt it opt-out LOL

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: true
+      # Avoid GITHUB_TOKEN,
+      # https://github.com/orgs/community/discussions/65321#discussioncomment-8003574
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -37,7 +42,6 @@ jobs:
               git commit -am "$MESSAGE"
               git push -f -u origin "$BRANCH"
               gh pr create --base master --head "$BRANCH" --fill
-              gh workflow run test.yml --ref "$BRANCH"
             fi
           done
         env:
