--- a/nature-sounds/PKGBUILD
+++ b/nature-sounds/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=nature-sounds
 pkgver=0.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A lightweight, nature sounds player for the command-line."
 arch=('x86_64' 'aarch64')
 url="https://github.com/jmelahman/nature-sounds"
@@ -28,6 +28,8 @@ build() {
 
 package() {
   cd "$pkgname" || exit
+
+  install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
   install -Dm755 "$pkgname" "$pkgdir/usr/bin/$pkgname"
 }
