--- a/work/PKGBUILD
+++ b/work/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=work
 pkgver=1.0.10
-pkgrel=1
+pkgrel=2
 pkgdesc='A stupid simple time tracker.'
 arch=('i686' 'x86_64' 'aarch64')
 url='https://github.com/jmelahman/work'
@@ -27,6 +27,8 @@ build() {
 
 package() {
   cd "$pkgname" || exit
+
+  install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
   install -Dm755 "$pkgname" "$pkgdir/usr/bin/$pkgname"
 }
