--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,12 @@
 repos:
   - repo: local
     hooks:
+      - id: aligo
+        name: aligo
+        entry: ./build aligo
+        language: system
+        files: ^aligo/PKGBUILD$
+        pass_filenames: false
       - id: buildifier
         name: buildifier
         entry: ./build buildifier
