--- a/aligo/PKGBUILD
+++ b/aligo/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=aligo
 pkgver=2.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Utility for checking and viewing Golang struct alignment info"
 arch=('any')
 url="https://github.com/essentialkaos/aligo"
 license=('Apache')
-makedepends=('make' 'go')
+makedepends=('git' 'go' 'make')
 _commit='f134c6dbf1afa9debf063b6bba2831f98b8931b0'
 source=("${pkgname}::git+$url.git#commit=$_commit")
 sha256sums=('SKIP')
