--- a/python-blessings/PKGBUILD
+++ b/python-blessings/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=python-blessings
 _name=${pkgname#python-}
 pkgver=1.7
-pkgrel=11
+pkgrel=12
 pkgdesc="A thin, practical wrapper around terminal coloring, styling, and positioning"
 url="https://github.com/erikrose/blessings"
 arch=(any)
@@ -30,19 +30,19 @@ sha256sums=('ee1dc1524631c4fdb9e3a7f1776cbf82ae50cf1edf225d45bf274bebed0c6c36')
 _archive="$_name-$pkgver"
 
 build() {
-  cd "$_archive"
+  cd "$_archive" || exit
 
   python -m build --wheel --no-isolation
 }
 
 check() {
-  cd "$_archive"
+  cd "$_archive" || exit
 
   script -c "python -m nose" /dev/null
 }
 
 package() {
-  cd "$_archive"
+  cd "$_archive" || exit
 
   python -m installer --destdir="$pkgdir" dist/*.whl
 
