--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -75,6 +75,12 @@ source = "github"
 github = "erikrose/blessings"
 use_max_tag = true
 
+[python-dict2xml]
+source = "github"
+github = "delfick/python-dict2xml"
+use_max_tag = true
+prefix = "release-"
+
 [ripsecrets]
 source = "github"
 github = "sirwart/ripsecrets"
