--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -81,12 +81,8 @@ github = "delfick/python-dict2xml"
 use_max_tag = true
 prefix = "release-"
 
-# PyPi is currently ahead, so Github may not be the source of truth :shrug:.
-[python-e3-testsuite]
-source = "github"
-github = "AdaCore/e3-testsuite"
-use_max_tag = true
-prefix = "v"
+[e3-testsuite]
+source = "pypi"
 
 [ripsecrets]
 source = "github"
