--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -70,6 +70,12 @@ github = "jmelahman/nature-sounds"
 use_max_tag = true
 prefix = "v"
 
+[prek]
+source = "github"
+github = "j178/prek"
+use_max_tag = true
+prefix = "v"
+
 [python-blessings]
 source = "github"
 github = "erikrose/blessings"
