gosuki use_max_release

--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -263,7 +263,7 @@ prefix = "v"
 [gosuki]
 source = "github"
 github = "blob42/gosuki"
-use_max_tag = true
+use_max_release = true
 prefix = "v"
 
 [gotouch]
