--- a/tecli/PKGBUILD
+++ b/tecli/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: gomanager <gomanager@generated>
 pkgname=tecli
 pkgver=0.4.2
-_pkgver=0.4.2-alpha
-pkgrel=1
+_pkgver=$pkgver-alpha
+pkgrel=2
 pkgdesc="In a world where everything is Terraform, teams use Terraform Cloud API to manage their workloads. TECLI increases teams productivity by facilitating such interaction and by providing easy commands that can be executed on a terminal or on CI/CD systems."
 arch=('x86_64' 'aarch64')
 url="https://github.com/awslabs/tecli"
